ajout de overflowy afin de limité l'effet décalé gestion correcte des congrats scoring

--- a/src/scss/game/_game.scss
+++ b/src/scss/game/_game.scss
@@ -1,3 +1,7 @@
+
+html{
+  overflow-y: scroll;// afin d'aviter les saut de marge a droite à l'apparition du scroll
+}
 #app{
   height: 100vh;
 }
